# SUD3

./: .gitignore  LICENSE  README.md  pyproject.toml
batch_scripts/: sud3.bat
src/: sud3.py
src/database/: db_connection.py  db_create_tables_ddl.py
src/json/: sudreg_api_v3.json
src/logger/: Logger.py
src/models/: ScriptContext.py  SudregTables.py  TableManager.py
src/schemas/: BrisPravniObliciDTO.py  BrisPravniOblikDTO.py  BrisRegistarDTO.py  BrisRegistriDTO.py  ClanSubjektaDTO.py  ClanSubjektaOvlastDTO.py  ClanSubjektaUdioDTO.py  ClanSubjektaUlogDTO.py  ClanoviSubjekataDTO.py  CountsDTO.py  DjelatnostPodruzniceDTO.py  DjelatnostiPodruznicaDTO.py  DokumentDTO.py  DokumentiDTO.py  DrzavaDTO.py  DrzaveDTO.py  EmailAdresaPodruzniceDTO.py  EmailAdreseDTO.py  EmailAdresePodruznicaDTO.py  EvidencijskaDjelatnostDTO.py  EvidencijskeDjelatnostiDTO.py  FunkcijaClanaSubjektaDTO.py  FunkcijaOsobeDTO.py  FunkcijeClanovaSubjekataDTO.py  FunkcijeOsobaDTO.py  GFIDTO.py  GrupaFunkcijaDTO.py  GrupaVrstaUpisaDTO.py  GrupeVrstaFunkcijaDTO.py  GrupeVrstaUpisaDTO.py  InozemniRegistarDTO.py  InozemniRegistriDTO.py  JeziciDTO.py  JezikDTO.py  NacionalnaKlasaDjelDTO.py  NacionalnaKlasifikacijaDjelatnostiDTO.py  NazivPodruzniceDTO.py  NaziviPodruznicaDTO.py  ObjavaPriopcenjaDTO.py  ObjavePriopcenjaDTO.py  (+93 more)
src/schemas/base_schemas/: PovijestPodatkaDTO.py  ReferencaPodatkaDTO.py
src/utils/: error_handler.py  send_mail.py
src/utils/data/: data_utils.py
src/utils/db/: db_utils.py
src/utils/web/: web_utils.py
